--- a/diceEM/assignment.ipynb
+++ b/diceEM/assignment.ipynb
@@ -75,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BagOfDice(die_priors=[0.25, 0.75], dice=[Die([0.3333, 0.3333, 0.3333]), Die([0.1, 0.2, 0.7])])\n"
+     ]
+    }
+   ],
    "source": [
     "from cse587Autils.DiceObjects.BagOfDice import BagOfDice, Die\n",
     "fair_die = Die([1/3]*3) # In python, this is equivalent to Die[1/3, 1/3, 1/3]\n",
@@ -97,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "die prior: 0.25\n",
+      "die object: Die([0.3333, 0.3333, 0.3333])\n",
+      "die prior: 0.75\n",
+      "die object: Die([0.1, 0.2, 0.7])\n"
+     ]
+    }
+   ],
    "source": [
     "bag[1] # Returns (0.75, Die([0.1, 0.2, 0.7]))\n",
     "for prior_die_pair in bag:\n",
@@ -116,9 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len() returns the number of dice in the bag: 2\n",
+      "accessing the die priors: [0.25, 0.75]\n",
+      "accessing the Die objects: [Die([0.3333, 0.3333, 0.3333]), Die([0.1, 0.2, 0.7])]\n"
+     ]
+    }
+   ],
    "source": [
     "# len() returns the number of dice in the bag\n",
     "print(f'len() returns the number of dice in the bag: {len(bag)}')\n",
@@ -143,9 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([ 2,  4, 14]), array([ 0,  4, 16]), array([ 6, 11,  3]), array([4, 7, 9]), array([ 2,  4, 14])]\n"
+     ]
+    }
+   ],
    "source": [
     "sample_data = [bag.draw(20) for _ in range(5)]\n",
     "print(sample_data)"
@@ -172,9 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bag difference: 0.4\n"
+     ]
+    }
+   ],
    "source": [
     "bag1 = BagOfDice([0.5, 0.5], \n",
     "                 [Die([0.9, 0.1, 0.0]), Die([0.1, 0.1, 0.8])])\n",
@@ -278,9 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'updated_bag_of_dice' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 15\u001b[0m\n\u001b[1;32m      6\u001b[0m experiment_result \u001b[38;5;241m=\u001b[39m generate_sample([\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m], \n\u001b[1;32m      7\u001b[0m                                     [[\u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.3\u001b[39m], \n\u001b[1;32m      8\u001b[0m                                      [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.6\u001b[39m]], \n\u001b[1;32m      9\u001b[0m                                      \u001b[38;5;241m4000\u001b[39m, \n\u001b[1;32m     10\u001b[0m                                      \u001b[38;5;241m30\u001b[39m)\n\u001b[1;32m     12\u001b[0m init_bag \u001b[38;5;241m=\u001b[39m BagOfDice([\u001b[38;5;241m0.75\u001b[39m, \u001b[38;5;241m0.25\u001b[39m], \n\u001b[1;32m     13\u001b[0m                      [Die([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.1\u001b[39m]), \n\u001b[1;32m     14\u001b[0m                       Die([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.4\u001b[39m, \u001b[38;5;241m0.2\u001b[39m])])\n\u001b[0;32m---> 15\u001b[0m \u001b[43mdiceEM\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_result\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minit_bag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10e-4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/workspaces/diceem-new-siya-verma/diceEM/assignment.py:68\u001b[0m, in \u001b[0;36mdiceEM\u001b[0;34m(experiment_data, bag_of_dice, accuracy, max_iterations)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;66;03m# YOUR CODE HERE. SET REQUIRED VARIABLES BY CALLING e-step AND m-step.\u001b[39;00m\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;66;03m# E-step: compute the expected counts given current parameters        \u001b[39;00m\n\u001b[1;32m     64\u001b[0m \n\u001b[1;32m     65\u001b[0m     \u001b[38;5;66;03m# M-step: update the parameters given the expected counts\u001b[39;00m\n\u001b[1;32m     67\u001b[0m     prev_bag_of_dice: BagOfDice \u001b[38;5;241m=\u001b[39m bag_of_dice\n\u001b[0;32m---> 68\u001b[0m     bag_of_dice \u001b[38;5;241m=\u001b[39m \u001b[43mupdated_bag_of_dice\u001b[49m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m iterations, bag_of_dice\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'updated_bag_of_dice' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import diceEM.assignment as assign\n",
