tests passed and questions answered!

--- a/diceEM/assignment.ipynb
+++ b/diceEM/assignment.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([ 2,  4, 14]), array([ 0,  4, 16]), array([ 6, 11,  3]), array([4, 7, 9]), array([ 2,  4, 14])]\n"
+      "[array([ 2,  5, 13]), array([ 2,  7, 11]), array([5, 8, 7]), array([ 4,  5, 11]), array([ 1,  7, 12])]\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,20 +323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'updated_bag_of_dice' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 15\u001b[0m\n\u001b[1;32m      6\u001b[0m experiment_result \u001b[38;5;241m=\u001b[39m generate_sample([\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m], \n\u001b[1;32m      7\u001b[0m                                     [[\u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.3\u001b[39m], \n\u001b[1;32m      8\u001b[0m                                      [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.2\u001b[39m, \u001b[38;5;241m0.6\u001b[39m]], \n\u001b[1;32m      9\u001b[0m                                      \u001b[38;5;241m4000\u001b[39m, \n\u001b[1;32m     10\u001b[0m                                      \u001b[38;5;241m30\u001b[39m)\n\u001b[1;32m     12\u001b[0m init_bag \u001b[38;5;241m=\u001b[39m BagOfDice([\u001b[38;5;241m0.75\u001b[39m, \u001b[38;5;241m0.25\u001b[39m], \n\u001b[1;32m     13\u001b[0m                      [Die([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.1\u001b[39m]), \n\u001b[1;32m     14\u001b[0m                       Die([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.4\u001b[39m, \u001b[38;5;241m0.2\u001b[39m])])\n\u001b[0;32m---> 15\u001b[0m \u001b[43mdiceEM\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperiment_result\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minit_bag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10e-4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/workspaces/diceem-new-siya-verma/diceEM/assignment.py:68\u001b[0m, in \u001b[0;36mdiceEM\u001b[0;34m(experiment_data, bag_of_dice, accuracy, max_iterations)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;66;03m# YOUR CODE HERE. SET REQUIRED VARIABLES BY CALLING e-step AND m-step.\u001b[39;00m\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;66;03m# E-step: compute the expected counts given current parameters        \u001b[39;00m\n\u001b[1;32m     64\u001b[0m \n\u001b[1;32m     65\u001b[0m     \u001b[38;5;66;03m# M-step: update the parameters given the expected counts\u001b[39;00m\n\u001b[1;32m     67\u001b[0m     prev_bag_of_dice: BagOfDice \u001b[38;5;241m=\u001b[39m bag_of_dice\n\u001b[0;32m---> 68\u001b[0m     bag_of_dice \u001b[38;5;241m=\u001b[39m \u001b[43mupdated_bag_of_dice\u001b[49m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m iterations, bag_of_dice\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'updated_bag_of_dice' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(12,\n",
+       " BagOfDice(die_priors=[0.40900946601771687, 0.5909905339822831], dice=[Die([0.2964, 0.1988, 0.202, 0.3028]), Die([0.0, 0.1994, 0.1987, 0.6019])]))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -354,14 +353,14 @@
     "init_bag = BagOfDice([0.75, 0.25], \n",
     "                     [Die([0.1, 0.3, 0.5, 0.1]), \n",
     "                      Die([0.1, 0.3, 0.4, 0.2])])\n",
-    "diceEM(experiment_result, init_bag, 10e-4, 100)"
+    "diceEM(experiment_result, init_bag, 10e-8, 100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  At an accuracy of 10^-4, it takes 6 iterations. At 10^-6, it takes 9. At 10^-8, it takes 12. Given a very large dataset, as the convergence criterion/accuracy decreases by 2 orders of magnitude, the number of iterations needed to converge increases by 3."
    ]
   },
   {
@@ -375,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: It does not have a large effect."
    ]
   },
   {
@@ -389,9 +388,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9,\n",
+       " BagOfDice(die_priors=[0.40416219790208086, 0.5958378020979191], dice=[Die([0.2973, 0.1988, 0.304, 0.2]), Die([0.1004, 0.1993, 0.1998, 0.5005])]))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import diceEM.assignment as assign\n",
@@ -413,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ansewer:"
+    "Answer: The number of iterations increases. This is likely because one of the probabilities is no longer zero, which means that there are more ways the likelihood could be distributed (e.g. between four faces instead of three)."
    ]
   },
   {
@@ -427,9 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BagOfDice(die_priors=[0.40254223047228077, 0.5974577695277191], dice=[Die([0.2986, 0.3027, 0.2015, 0.1972]), Die([0.1988, 0.1986, 0.2011, 0.4015])])\n"
+     ]
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import diceEM.assignment as assign\n",
@@ -458,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: 180,000"
    ]
   },
   {
@@ -470,12 +489,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24, BagOfDice(die_priors=[0.39915936860925993, 0.6008406313907401], dice=[Die([0.3037, 0.2999, 0.1965, 0.1999]), Die([0.2017, 0.199, 0.202, 0.3973])]))\n",
+      "(26, BagOfDice(die_priors=[0.39464281093822207, 0.6053571890617779], dice=[Die([0.2979, 0.2972, 0.202, 0.2029]), Die([0.2031, 0.1993, 0.2013, 0.3963])]))\n",
+      "(24, BagOfDice(die_priors=[0.39149585595523134, 0.6085041440447687], dice=[Die([0.3102, 0.2973, 0.195, 0.1976]), Die([0.2027, 0.201, 0.2007, 0.3955])]))\n",
+      "(24, BagOfDice(die_priors=[0.4052832364622346, 0.5947167635377654], dice=[Die([0.302, 0.2964, 0.1982, 0.2034]), Die([0.1972, 0.2009, 0.2006, 0.4013])]))\n",
+      "(25, BagOfDice(die_priors=[0.39853011605977323, 0.6014698839402267], dice=[Die([0.3017, 0.2953, 0.1979, 0.2051]), Die([0.2015, 0.1998, 0.1974, 0.4013])]))\n",
+      "(22, BagOfDice(die_priors=[0.3929973084138633, 0.6070026915861367], dice=[Die([0.2978, 0.2996, 0.2038, 0.1988]), Die([0.2002, 0.1949, 0.202, 0.4029])]))\n",
+      "(24, BagOfDice(die_priors=[0.40784855515949126, 0.5921514448405087], dice=[Die([0.3023, 0.2992, 0.1989, 0.1996]), Die([0.203, 0.2003, 0.1988, 0.3979])]))\n",
+      "(26, BagOfDice(die_priors=[0.42387407170510866, 0.5761259282948914], dice=[Die([0.3007, 0.2947, 0.1986, 0.2059]), Die([0.2011, 0.2005, 0.1987, 0.3997])]))\n",
+      "(25, BagOfDice(die_priors=[0.4184047191747243, 0.5815952808252757], dice=[Die([0.2985, 0.3018, 0.1964, 0.2033]), Die([0.2003, 0.1983, 0.2009, 0.4006])]))\n",
+      "(22, BagOfDice(die_priors=[0.39304877852604375, 0.6069512214739563], dice=[Die([0.3046, 0.2972, 0.2017, 0.1966]), Die([0.1975, 0.2029, 0.1991, 0.4005])]))\n"
+     ]
+    }
+   ],
    "source": [
     "for data_seed in range(10):\n",
-    "    data = generate_sample([4, 6], face_probs, 4000, 30, seed=data_seed)\n",
+    "    data = generate_sample([4, 6], face_probs, 2500, 30, seed=data_seed)\n",
     "    print(diceEM(data, init_bag, 10e-4, 100))"
    ]
   },
@@ -483,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: About 2500."
    ]
   },
   {
@@ -510,20 +546,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(30, BagOfDice(die_priors=[0.4029390078094358, 0.5970609921905643], dice=[Die([0.3053, 0.296, 0.197, 0.2017]), Die([0.2013, 0.1993, 0.2033, 0.3962])]))\n",
+      "(29, BagOfDice(die_priors=[0.3923787598590353, 0.6076212401409646], dice=[Die([0.3039, 0.2972, 0.202, 0.1969]), Die([0.2022, 0.2004, 0.1989, 0.3985])]))\n",
+      "(30, BagOfDice(die_priors=[0.4125008203751556, 0.5874991796248443], dice=[Die([0.3024, 0.2958, 0.1998, 0.202]), Die([0.2032, 0.2006, 0.1981, 0.3981])]))\n",
+      "(31, BagOfDice(die_priors=[0.3931687880528429, 0.6068312119471571], dice=[Die([0.2964, 0.3021, 0.1981, 0.2034]), Die([0.2016, 0.201, 0.1978, 0.3996])]))\n",
+      "(32, BagOfDice(die_priors=[0.38820280228888204, 0.611797197711118], dice=[Die([0.2981, 0.3011, 0.1976, 0.2032]), Die([0.2038, 0.2004, 0.1965, 0.3994])]))\n",
+      "(27, BagOfDice(die_priors=[0.38425289075320335, 0.6157471092467968], dice=[Die([0.2969, 0.3008, 0.2006, 0.2017]), Die([0.1988, 0.1973, 0.201, 0.403])]))\n",
+      "(34, BagOfDice(die_priors=[0.4098591098580972, 0.5901408901419029], dice=[Die([0.3038, 0.2961, 0.1974, 0.2027]), Die([0.2001, 0.203, 0.1998, 0.3971])]))\n",
+      "(30, BagOfDice(die_priors=[0.40834458900343545, 0.5916554109965645], dice=[Die([0.3036, 0.2966, 0.199, 0.2008]), Die([0.202, 0.2022, 0.1978, 0.3981])]))\n",
+      "(28, BagOfDice(die_priors=[0.39426312635544747, 0.6057368736445524], dice=[Die([0.3014, 0.3026, 0.2018, 0.1942]), Die([0.2022, 0.2004, 0.1987, 0.3987])]))\n",
+      "(28, BagOfDice(die_priors=[0.39098284716185866, 0.6090171528381414], dice=[Die([0.3033, 0.2996, 0.1988, 0.1983]), Die([0.1969, 0.2012, 0.2004, 0.4015])]))\n"
+     ]
+    }
+   ],
    "source": [
     "for data_seed in range(10):\n",
-    "    data = generate_sample([4, 6], face_probs, 4000, 50, seed=data_seed)\n",
-    "    print(diceEM(data, init_bag, 10e-4, 100))"
+    "    data = generate_sample([4, 6], face_probs, 1750, 50, seed=data_seed)\n",
+    "    print(diceEM(data, init_bag, 10e-8, 100))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer"
+    "Answer: About 1750"
    ]
   },
   {
@@ -537,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Tightening the convergence criterion does not make the results substantially more accurate."
    ]
   },
   {
